fixing issues with aside on mobile, moved lower in the html

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -21,9 +21,9 @@ main {
 	aside {
 		padding:1rem;
 		background:$midnight;
-		position:absolute;
-		bottom:0;
 		width:100%;
+		height:15vh;
+		overflow:auto;
 		text-align:center;
 
 		p {
@@ -36,7 +36,7 @@ main {
 			width:20vw;
 			height:120vh;
 			text-align:left;
-			//overflow:hidden;
+			overflow:initial;
 
 			div {
 				position:absolute;
@@ -58,7 +58,7 @@ main {
 		}
 	}
 
-	aside + section {
+	.half {
 		@media screen and (min-width:60rem) {
 			top:50%;
 			left:5vw;
